# Storytelling_agent

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: daily_novel.yml
novels/: Echo of Alexandria_20250604_185411.txt  Nimbus _ Beacon_20250603_185442.txt  Nimbus _ Beacon_20250606_185411.txt  The Algorithmic Arcanum_20250608_185237.txt  The Algorithmic Archivist_20250605_190450.txt  The Lamplight Echo_20250607_184925.txt  The Papyrus _ Peychaud_s_20250602_185553.txt  _Codex_ Helios__20250601_184913.txt
static/css/: style.css
storytelling_agent/: plans.py  prompts.py  storytelling_agent.py  utils.py
templates/: index.html  result.html
